# FastTracker

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  README_VISUALIZATION.md  docker-compose.yml  requirements.txt  visualize_3d.bat  visualize_all.bat  visualize_dashboard.bat  visualize_imm.bat  visualize_player.bat  visualize_quality.bat  webapp.bat
benchmarks/: benchmark_tracker.cpp  benchmark_ukf.cpp
docs/: algorithm_description.docx  build_manual.py  capture_screenshots.py  generate_algorithm_doc.py  generate_perf_report.py  manual.html  performance_report.pptx  recapture_panels.py
docs/screenshots/: b64_sizes.json
include/evaluation/: tracking_evaluator.hpp
include/simulation/: radar_simulator.hpp  target_generator.hpp
include/tracker/: data_association.cuh  glmb_association.hpp  jpda_association.hpp  mht_association.hpp  multi_target_tracker.hpp  pmbm_association.hpp  track_manager.hpp
include/ukf/: imm_ukf.cuh  imm_ukf.hpp  ukf.cuh  ukf_kernels.cuh
include/utils/: cuda_utils.cuh  matrix.cuh  types.hpp
python/visualization/: __init__.py  data_loader.py  imm_analyzer.py  performance_dashboard.py  track_quality_report.py  trajectory_3d.py  trajectory_player.py
python/webapp/: __init__.py  app.py  trajectory_gen.py
python/webapp/templates/: index.html
scripts/: glmb_test.py  rebuild-and-test.sh  rebuild-webapp.sh  run_glmb_test.sh  setup_wsl2.sh
src/: main.cpp
src/evaluation/: tracking_evaluator.cpp
src/simulation/: radar_simulator.cpp  target_generator.cpp  target_generator_missiles.cpp
src/tracker/: data_association.cu  glmb_association.cpp  jpda_association.cpp  mht_association.cpp  multi_target_tracker.cpp  pmbm_association.cpp  track_manager.cpp
src/ukf/: imm_ukf.cpp  imm_ukf.cu  ukf.cu  ukf_kernels.cu
src/utils/: cuda_utils.cu
tests/: test_simulation.cpp  test_tracker.cpp  test_ukf.cpp
